# fin-risk-engine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
config/: model_config.yaml  paths.yaml
docs/: DATA_CONTRACT.md  EXECUTION.md  MASTER_PLAN.md  MODEL_CARD.md  VALIDATION_REPORT.md
notebooks/: 01_data_loading_eda.ipynb
outputs/tuning/: catboost_best_params.json  xgboost_best_params.json
scripts/: build_features_and_splits.py  build_gold_table.py  evaluate_model.py  run_benchmark.py  run_feature_selection.py  run_monitoring.py  run_pipeline.py  run_serve.py  run_tuning.py  score_test_data.py  show_predictions.py  train_model.py  verify_model.py
skills/: backend.md  business-logic.md
src/: __init__.py  logging_config.py
src/config/: __init__.py  load.py
src/eda/: __init__.py  plot_style.py  schema_audit.py  summaries.py
src/features/: __init__.py  behavioral.py  build.py  risk_aggregates.py  selection.py  splits.py
src/ingestion/: __init__.py  gold_table.py  load.py
src/modeling/: __init__.py  advanced_metrics.py  benchmark.py  calibrate.py  explain.py  train.py  train_lightgbm.py  train_xgboost.py  tuning.py
src/monitoring/: __init__.py  drift.py  performance.py
src/serving/: __init__.py  app.py
src/tracking/: __init__.py  mlflow_tracker.py
tests/: conftest.py  test_features_build.py  test_features_splits.py  test_ingestion.py  test_modeling_calibrate.py  test_modeling_train.py  test_monitoring_drift.py
