[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fin-risk-engine"
version = "0.1.0"
description = "Financial Transaction Risk & Fraud Early-Warning System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pyarrow>=14.0",
    "structlog>=23.0",
]

[project.optional-dependencies]
ml = [
    "catboost>=1.2",
    "scikit-learn>=1.3",
    "joblib>=1.2",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "optuna>=3.0",
    "scipy>=1.11",
]
serve = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "gradio>=4.0",
]
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = [
    "fin-risk-engine[ml,serve,viz,dev]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
